# stock-intelligence-platform

./: .env.example  .gitignore  00_CREATE_AUTOMATION_PROGRESS.md  AUTOMATION_PROGRESS.md  CHANGELOG.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: analysis.py  assets.py  backtests.py  health.py  jobs.py  reports.py  signals.py
backend/app/core/: config.py  constants.py  logging.py  rate_limiter.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  alert_log.py  alert_state.py  asset.py  backtest_run.py  backtest_trade.py  indicator_snapshot.py  (+3 more)
backend/app/middleware/: request_id.py
backend/app/scheduler/: runner.py
backend/app/schemas/: asset.py  backtest.py  errors.py  indicator_snapshot.py  pagination.py  price_bar.py  report.py  signal.py
backend/app/services/: alert_service.py  analysis_service.py  backtest_service.py  ingestion_service.py  pipeline_service.py  report_service.py  scoring_service.py
backend/tests/: conftest.py  test_assets.py  test_health.py
backend/tests/integration/: conftest.py  test_alerts.py  test_analysis.py  test_api_contracts.py  test_backtests.py  test_jobs.py  test_reports.py  test_signals.py
backend/tests/unit/: test_alert_dedup.py  test_alert_rules.py  test_backtesting.py  test_indicators.py  test_report_context.py  test_report_fallback.py  test_report_output_renderer.py  test_report_validators.py  test_scoring.py  test_yfinance_provider.py
(+66 files in other folders)
